--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Prof. Dush
+title: Title of your site
 
 # Short description of your site
-description: Resources and In-Process Work from Prof. Lisa Dush
+description: Enter a description here
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
